--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,23 +1,20 @@
 name: Node.js CI
+on:
+  push:
+    branches:
+      - main
 
-  on:
-	  push:
-	    branches: [ "main" ]
+jobs:
+ build:
+  runs-on: ubuntu-latest
+  steps:
+   - uses: actions/checkout@v4
+     with: fetch-depth: 0
+   - name: Use Node.js
+     uses: actions/setup-node@v4
+     with:
+      node-version: 20
+      cache: 'npm'
 
-	jobs:
-	  build:
-	    runs-on: ubuntu-latest
-
-	    steps:
-	    - uses: actions/checkout@v4
-	      with:
-	        fetch-depth: 0
-
-	    - name: Use Node.js
-	      uses: actions/setup-node@v4
-	      with:
-	        node-version: 20
-	        cache: 'npm'
-
-	    - run: npm ci
-	    - run: npm test
+   - run: npm ci
+   - run: npm test
